--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="script.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
 </head>
 <body>
     <div class="main-container">
@@ -27,6 +28,12 @@
                     <img id="saveiconimg" style="width: 70%;" src="images/saveicon.png">
                 </button>
             </div>
+            <form class="search-bar" onsubmit="searchExpenses(event)">
+                <div class="search">
+                    <button type="button" onclick="searchExpenses(event)" class="search-icon material-symbols-outlined">search</button>
+                    <input class="search-input" type="search" placeholder="Search">
+                </div>
+            </form>
         </div>
         
     </div>
