--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main-container">
         
-        <div class="inputfeilds">
+        <div class="inputfields">
             <h1>Expense Tracker</h1>    
             <form onsubmit="enterValue(); return false;">
                 <label for="item-name"> Item name</label>
