--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <input id="itemname" name="item-name" type="text" placeholder="Item Name" autocomplete="off">
 
                 <label for="amount"> Amount</label>    
-                <input id="value" name="amount" type="number" placeholder="Amount" autocomplete="off">
+                <input id="value" name="amount" type="number" step="0.01" placeholder="Amount" autocomplete="off">
 
                 <input id="submit" type="submit" value="Submit"></input>
             </form>
